[workspace]
members = [
    "programs/*",
    "examples/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1-alpha.4"
authors = ["Wormhole Contributors"]
license = "Apache-2.0"
homepage = "https://wormhole.com"
repository = "https://github.com/wormhole-foundation/wormhole"

[workspace.dependencies.wormhole-raw-vaas]
version = "0.1.1"
features = ["ruint", "on-chain"]
default-features = false

[workspace.dependencies.anchor-lang]
version = "0.28.0"
features = ["derive", "init-if-needed"]

[workspace.dependencies]
wormhole-io = "0.1.0"
solana-program = "1.16.16"
anchor-spl = "0.28.0"
cfg-if = "1.0"
hex = "0.4.3"
ruint = "1.9.0"
hex-literal = "0.4.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
