[workspace]
members = [
    "bridge/client",
    "bridge/cpi_poster",
    "bridge/program",
    "bridge/program_stub",
    "migration",
    "modules/nft_bridge/program",
    "modules/token_bridge/client",
    "modules/token_bridge/program",
    "solitaire/program",
    "solitaire/rocksalt",
]
exclude = [
    "modules/token_bridge/token_metadata_parser",
]

[patch.crates-io]
memmap2 = { path = "bridge/memmap2-rs" }
spl-token = { git = "https://github.com/wormholelabs-xyz/spl-token.git", rev = "7ae1b55" }
