[workspace]
members = [
    "bridge/client",
    "bridge/cpi_poster",
    "bridge/program",
    "bridge/program_stub",
    "migration",
    "modules/nft_bridge/program",
    "modules/token_bridge/client",
    "modules/token_bridge/program",
    "solitaire/program",
    "solitaire/rocksalt",
]
exclude = [
    "modules/token_bridge/token_metadata_parser",
]

[patch.crates-io]
memmap2 = { path = "bridge/memmap2-rs" }
spl-token = { path = "deps/spl-token" }

[patch."https://github.com/wormhole-foundation/metaplex-program-library"]
mpl-token-metadata = { path = "deps/metaplex-program-library/token-metadata/program" }
