[workspace]
resolver = "3"
members = [
  "contracts/wormhole-soroban-client",
  "contracts/wormhole-contract",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
soroban-sdk = "23.0.2"
wormhole-soroban-client = { path = "contracts/wormhole-soroban-client" }
stellar-strkey = "0.0.14"
base64 = "0.21"
serde_json = "1.0"
hex = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
