[workspace]
resolver = "3"
members = [
  "contracts/wormhole-soroban-client",
  "contracts/wormhole-contract",
  "integration-tests"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
soroban-sdk = "25.1.1"
wormhole-soroban-client = { path = "contracts/wormhole-soroban-client" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
