[workspace]
members = [
    "contracts/cw20-wrapped",
    "contracts/wormhole",
    "contracts/token-bridge",
    "contracts/mock-bridge-integration",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
cw20-legacy = { git = "https://github.com/wormhole-foundation/cw20-legacy/", rev = "d127247" }
