[package]
name = "agent"
version = "0.1.0"
authors = ["Hendrik Hofstadt <hendrik@nexantic.com>"]
edition = "2018"

[dependencies]
tonic = "0.3.0"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
prost = "0.6"
prost-types = "0.6"
solana-sdk = { version = "1.3.11" }
solana-client = { version = "1.3.11" }
solana-faucet = "1.3.11"
spl-token =  "=2.0.3"
wormhole-bridge = { path = "../bridge" }
primitive-types = { version = "0.7.2" }
hex = "0.4.2"
thiserror = "1.0.20"
tungstenite = "0.11.1"
serde = "1.0.103"
url = "2.1.1"
serde_bytes = "0.11.5"
log = "0.4.8"
serde_derive = "1.0.103"
serde_json = "1.0.57"
bs58 = "0.3.1"

[build-dependencies]
tonic-build = { version = "0.3.0", features = ["prost"] }
