# Note: This crate must be built using do.sh

[package]
name = "wormhole-bridge"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Certus One Team <info@certus.one>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default", "spl-token/default"]

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "=1.2.17", default-features = false, optional = true }
spl-token = { package = "spl-token", version = "1.0.6", default-features = false, optional = true }
thiserror = "1.0"
arrayref = "0.3.6"
byteorder = "1.3.4"
zerocopy = "0.3.0"
sha3 = "0.9.1"

[dev-dependencies]
rand = { version = "0.7.0" }
hex = "0.4.2"

[lib]
name = "spl_bridge"
crate-type = ["cdylib", "lib"]
