[package]
name = "cli"
version = "0.1.0"
authors = ["Hendrik Hofstadt <hendrik@nexantic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
solana-clap-utils = { version = "1.3.1"}
solana-cli-config = { version = "1.3.1" }
solana-logger = { version = "1.3.1" }
solana-sdk = { version = "1.3.1" }
solana-client = { version = "1.3.1" }
solana-faucet = "1.3.1"
spl-token = { package = "spl-token", git = "https://github.com/solana-labs/solana-program-library" }
wormhole-bridge = { path = "../bridge" }
primitive-types = {version ="0.7.2", default-features = false}
hex = "0.4.2"
