[package]
name = "cli"
version = "0.1.0"
authors = ["Hendrik Hofstadt <hendrik@nexantic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
solana-clap-utils = { version = "1.4.20" }
solana-cli-config = { version = "1.4.20" }
solana-logger = { version = "1.4.20" }
solana-sdk = { version = "1.4.20" }
solana-client = { version = "1.4.20" }
solana-faucet = "1.4.20"
solana-account-decoder = { version = "1.4.20" }
spl-token = "=3.0.1"
wormhole-bridge = { path = "../bridge" }
primitive-types = { version = "0.7.2" }
hex = "0.4.2"
thiserror = "1.0.20"
tungstenite = "0.11.1"
serde = "1.0.103"
url = "2.1.1"
serde_bytes = "0.11.5"
log = "0.4.8"
serde_derive = "1.0.103"
serde_json = "1.0.57"
rand = "0.7.3"
