# Note: This crate must be built using do.sh

[package]
name = "ee-vaa-program"
version = "0.1.0"
description = "External Entity Verifiable Action Approval program on Solana"
authors = ["Certus One Team <info@certus.one>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
program = ["spl-token/no-entrypoint"]

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-program = "=1.5.5"
spl-token = { version = "=3.0.1" }
thiserror = "1.0"
byteorder = "1.4.2"
zerocopy = "0.3.0"
sha3 = "0.9.1"
primitive-types = { version = "0.7.2", default-features = false }

[dev-dependencies]
rand = { version = "0.7.0" }
hex = "0.4.2"

[lib]
name = "ee_vaa_program"
crate-type = ["cdylib", "lib"]
