# Note: This crate must be built using do.sh

[package]
name = "wormhole-eevaa-program"
version = "0.1.0"
description = "EEVAA Wormhole program on Solana"
authors = ["Certus One Team <info@certus.one>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
default = ["program"]
no-entrypoint = []
program = []

[dependencies]
byteorder = "1.4.2"
num_enum = "0.5.1"
remove_dir_all = "=0.5.0"
solana-program = "=1.5.5"
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0" }
hex = "0.4.2"

[lib]
name = "eevaa_program"
crate-type = ["cdylib", "lib"]
