[package]
name = "wormhole-common"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "=0.28.0"
anyhow = "1.0.71"
attribute-legacy-account = { path = "../attribute-legacy-account" }
solana-program = "=1.14.19"