[package]
name = "solana-wormhole-core-bridge" # TODO: Change this
description = "Wormhole Core Bridge Program for Solana"
version = "0.1.0"
edition = "2021"
authors = ["W7"]
license = "Apache-2.0"
homepage = "https://wormhole.com"
repository = "https://github.com/wormhole-foundation/wormhole"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["localnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
### A.K.A. Local Validator (via JS Integration Test)
localnet = []
### A.K.A. Solana Mainnet
mainnet = []
### A.K.A. Solana Devnet
testnet = []
### A.K.A. Tilt
devnet = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["derive", "init-if-needed"] }
hex = "0.4"
ruint = "1.8.0"
solana-program = "=1.14.20"
wormhole-io = { version = "=0.0.16", features = ["ruint"] }
wormhole-solana-common = { path = "../../common/solana-common" }
wormhole-raw-vaas = { version = "=0.0.18", features = ["anchor"], default-features = false }
wormhole-vaas = { version = "=0.0.15", features = ["anchor"], default-features = false }
