[package]
name = "cw20-wrapped-2"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2018"
description = "Wrapped CW20 token contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw2 = { version = "0.13.2" } 
cw20 = { version = "0.13.2" } 
cw20-base = { version = "0.13.2", features = ["library"] } 
thiserror = { version = "1.0.31" }
