[package]
name = "cw721-wrapped"
version = "0.10.1"
edition = "2018"
description = "Wrapped CW721 token contract"

exclude = [
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.8.0" }
cw721-base = { path = "../../contracts/cw721-base", version = "0.10.0", features = ["library"] }
cw721 = { path = "../../packages/cw721", version = "0.10.1" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta2" }
