[package]
name = "global-accountant"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
accountant = "0.1.0"
anyhow = "1"
base64 = "0.13"
cosmwasm-schema = "1"
cosmwasm-std = "1"
cw-storage-plus = "0.13.2"
cw_transcode = "0.1.0"
cw2 = "0.13.2"
hex = { version = "0.4.3", features = ["serde"] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_wormhole.workspace = true
thiserror = { version = "1.0.31" }
tinyvec = { version = "1.6", default-features = false, features = ["alloc", "serde"]}
wormhole-bindings = "0.1.0"
wormhole-sdk = { workspace = true, features = ["schemars"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cw-multi-test = "0.13.2"
serde-json-wasm = "0.4"
wormhole-bindings = { version = "0.1", features = ["fake"] }
