[package]
name = "ibc-translator"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query/reply exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
anybuf = "0.1.0"
anyhow = "1"
bs58 = "0.4.0"
cosmwasm-schema = "1.2.7"
cosmwasm-std = {version="1.2.7", features = ["ibc3"] }
cw-storage-plus = "0.13.2"
cw-utils = "1.0.1"
cw2 = "0.13.2"
cw20-wrapped-2 = { version = "0.1.0", features = ["library"] }
serde-json-wasm = "0.5.1"
serde_wormhole = "0.1.0"
token-bridge-cosmwasm = { version = "0.1.0", features = ["library"] }
wormhole-cosmwasm = { version = "0.1.0", features = ["library"] }
wormhole-sdk = { version = "0.1.0", features = ["schemars"] }