[package]
name = "ibc-translator"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query/reply exports
library = []

[dependencies]
anybuf = "0.1.0"
anyhow = "1"
bs58 = "0.4.0"
cosmwasm-schema = "1.2.7"
cosmwasm-std = {version="1.2.7", features = ["ibc3"] }
cw-storage-plus = "0.13.2"
cw-utils = "1.0.1"
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw20-wrapped-2 = { version = "0.1.0", features = ["library"] }
serde-json-wasm = "0.5.1"
serde_wormhole.workspace = true
token-bridge-cosmwasm = { version = "0.1.0", features = ["library"] }
wormhole-bindings = "0.1.0"
wormhole-cosmwasm = { version = "0.1.0", features = ["library"] }
wormhole-sdk = { workspace = true, features = ["schemars"] }

[dev-dependencies]
cosmwasm-crypto = { version = "1.2.7" }
hex = "0.4.3"
prost = "0.11.0"
serde = { version = "1.0.103", features = ["derive", "alloc"]}