[package]
name = "mock-bridge-integration-2"
version = "0.1.0"
edition = "2018"
description = "Mock Bridge Integration for Transfer w/ Payload"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw20-wrapped-2 = { path = "../cw20-wrapped", features = ["library"] }
terraswap = "2.6.1"
thiserror = { version = "1.0.31" }
k256 = { version = "0.9.4", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.9.1", default-features = false }
generic-array = { version = "0.14.4" }
hex = "0.4.2"
lazy_static = "1.4.0"
bigint = "4"

wormhole-bridge-terra-2 = { path = "../wormhole", features = ["library"] }
token-bridge-terra-2 = { path = "../token-bridge", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false }
serde_json = "1.0"
