[package]
name = "mock-bridge-integration-2"
version = "0.1.0"
edition = "2018"
description = "Mock Bridge Integration for Transfer w/ Payload"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }

wormhole-cosmwasm = { version = "0.1.0", features = ["library"] }
token-bridge-cosmwasm = { version = "0.1.0", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false }
serde_json = "1.0"
