[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Use library feature to disable all instantiate/execute/query exports
library = []
# Use the interface feature to enable interface exports for integration testing
interface = ["cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-std = "1.0.0"
cw-storage-plus = "1.0.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
cw-multi-test = { version = "0.14", optional = true }
cw20 = { version = "0.13.2" } 

[dev-dependencies]
cw-multi-test = "0.14"